# Intelligent-Browser

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
CrewAI/: JWT_insta.py  agent.py  db.py  main.py  requirements.txt  tasks.py  test.py  testtool.py  tools.py
CrewAI/sample/: enhancedtools.py  moretool.py  smartactual.py
IntelliBrowse-main/: .env.example  .gitignore  README.md  pyproject.toml  test_apis.py
IntelliBrowse-main/src/intellibrowse/: __init__.py  config.py  main.py
IntelliBrowse-main/src/intellibrowse/agent/: __init__.py  graph.py  prompts.py  state.py
IntelliBrowse-main/src/intellibrowse/agent/nodes/: act.py  evaluate.py  observe.py  plan.py  subtask.py
IntelliBrowse-main/src/intellibrowse/auth/: __init__.py  agent.py  google.py  routes.py  vault.py
IntelliBrowse-main/src/intellibrowse/auth/strategies/: __init__.py  base.py  github.py  gmail.py  linkedin.py
IntelliBrowse-main/src/intellibrowse/browser/: __init__.py  actions.py  manager.py  observation.py
IntelliBrowse-main/src/intellibrowse/memory/: __init__.py  longterm.py  session.py  working.py
IntelliBrowse-main/src/intellibrowse/models/: __init__.py  cascade.py  providers.py  schemas.py
IntelliBrowse-main/src/intellibrowse/utils/: logger.py  parser.py
IntelliBrowse-main/static/: index.html
backend/: .gitignore  Dockerfile  main.py  model_ss.py  pyproject.toml  requirements.txt
backend/myenv/: pyvenv.cfg
backend/src/: main.py
backend/src/agents/: clau_auth.py  client.py  crew.py  crew1.py  main.py  server.py
backend/src/agents/config/: agents.yaml  tasks.yaml  tools.yaml
backend/src/agents/event_listerner/: basic_listerner.py
backend/src/agents/examples/: executor_agent_example.py  planner_agent_example.py
backend/src/agents/models/: outputs.py
backend/src/agents/tools/: auth_tools.py  browser_tools.py  not_imp.py  test.py
backend/src/agents/utils/: ExtraFunctions.py  browser_manager.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/controllers/: auth.py
backend/src/database/: auth_db_setup.py  database.py  intellibrowse.db  tempCodeRunnerFile.py
backend/src/middleware/: get_current_user.py
backend/src/models/: user_model.py
backend/src/routes/: auth_routes.py  chat_route.py  screenshot_route.py
backend/src/schema/: schema.py
backend/src/utils/: connection_manager.py
frontend/: README.md  package-lock.json  package.json
frontend-login/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
frontend-login/pages/: _app.js  chat.tsx  chat1.tsx  chat2.tsx  dashboard.tsx  index.tsx  login.tsx  signup.tsx  singup.tsx
frontend-login/pages/api/: authcontext.js
frontend-login/styles/: globals.css
frontend/pages/: chat.tsx  signup.tsx
