[project]
name = "intellibrowse"
version = "0.1.0"
description = "Agentic browser — describe tasks in plain English, the agent completes them autonomously"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LLM orchestration
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    # Browser automation
    "playwright>=1.52.0",
    "playwright-stealth>=1.0.6",
    # LLM providers (all OpenAI SDK compatible)
    "openai>=1.70.0",
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=15.0",
    # Data validation
    "pydantic>=2.11.0",
    # Config
    "python-dotenv>=1.1.0",
    # Auth
    "google-auth>=2.29.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
