[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "appdirs==1.4.4",
    "argon2-cffi==25.1.0",
    "asgiref==3.8.1",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "auth0-python==4.10.0",
    "backoff==2.2.1",
    "bcrypt==4.1.0",
    "blinker==1.9.0",
    "build==1.2.2.post1",
    "cachetools==5.5.2",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "chromadb==1.0.15",
    "click==8.2.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "crewai==0.130.0",
    "cryptography==45.0.4",
    "decorator==5.2.1",
    "distro==1.9.0",
    "docstring-parser==0.16",
    "durationpy==0.10",
    "ecdsa==0.19.1",
    "et-xmlfile==2.0.0",
    "executing==2.2.0",
    "fastapi==0.115.9",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "flatbuffers==25.2.10",
    "frozenlist==1.7.0",
    "fsspec==2025.5.1",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.25.1",
    "google-api-python-client==2.172.0",
    "google-auth==2.40.3",
    "google-auth-httplib2==0.2.0",
    "google-generativeai==0.8.5",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.3",
    "grpcio==1.73.0",
    "grpcio-status==1.71.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "huggingface-hub==0.33.0",
    "humanfriendly==10.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "instructor==1.8.3",
    "ipython==9.3.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.8.2",
    "json-repair==0.46.2",
    "json5==0.12.0",
    "jsonpatch==1.33",
    "jsonpickle==4.1.1",
    "jsonpointer==3.0.0",
    "jsonref==1.1.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "kubernetes==33.1.0",
    "langchain==0.3.25",
    "langchain-core==0.3.65",
    "langchain-google-genai==2.0.10",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.3.45",
    "litellm==1.72.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mmh3==5.1.0",
    "mpmath==1.3.0",
    "multidict==6.5.0",
    "nest-asyncio>=1.6.0",
    "networkx==3.5",
    "numpy==2.3.0",
    "oauthlib==3.2.2",
    "onnxruntime==1.22.0",
    "openai==1.88.0",
    "openpyxl==3.1.5",
    "opentelemetry-api==1.34.1",
    "opentelemetry-exporter-otlp-proto-common==1.34.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.34.1",
    "opentelemetry-exporter-otlp-proto-http==1.34.1",
    "opentelemetry-instrumentation==0.55b1",
    "opentelemetry-instrumentation-asgi==0.55b1",
    "opentelemetry-instrumentation-fastapi==0.55b1",
    "opentelemetry-proto==1.34.1",
    "opentelemetry-sdk==1.34.1",
    "opentelemetry-semantic-conventions==0.55b1",
    "opentelemetry-util-http==0.55b1",
    "orjson==3.10.18",
    "overrides==7.7.0",
    "packaging==24.2",
    "parso==0.8.4",
    "passlib==1.7.4",
    "pdfminer-six==20250506",
    "pdfplumber==0.11.7",
    "pillow==11.2.1",
    "playwright==1.52.0",
    "posthog==5.0.0",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==5.29.5",
    "psycopg2-binary==2.9.10",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyee==13.0.0",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pyparsing==3.2.3",
    "pypdfium2==4.30.1",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "pyvis==0.3.2",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==13.9.4",
    "rpds-py==0.25.1",
    "rsa==4.9.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "stack-data==0.6.3",
    "starlette==0.45.0",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "tokenizers==0.20.3",
    "tomli==2.2.1",
    "tomli-w==1.2.0",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.16.0",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "uritemplate==4.2.0",
    "urllib3==2.4.0",
    "uv==0.7.13",
    "uvicorn==0.35.0",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "wrapt==1.17.2",
    "yarl==1.20.1",
    "zipp==3.23.0",
    "zstandard==0.23.0",
]
